D4-kubernetes/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: convert-service
  labels:
    app.kubernetes.io/part-of: pm4-6558-d4
